把presentblfactory更改为非synchronize的，删除了单据类int型的autoid（插入的时候太麻烦），在listvo里增加了日期，完善present模块的界面，初步建立sale逻辑层和部分界面层（使用了继承，未测试）

--- a/CPClient/src/main/resources/fxml/managerUI/PresentForMembership.fxml
+++ b/CPClient/src/main/resources/fxml/managerUI/PresentForMembership.fxml
@@ -120,9 +120,9 @@
       <Pane fx:id="presentListPane" layoutY="159.0" prefHeight="435.0" prefWidth="196.0" style="-fx-background-color: #FFB5B5;">
          <children>
             <Label layoutX="62.0" layoutY="14.0" text="赠品清单" />
-            <ScrollPane layoutY="44.0" opacity="0.0" prefViewportHeight="391.0" prefViewportWidth="196.0">
+            <ScrollPane layoutY="44.0" prefHeight="393.0" prefViewportHeight="391.0" prefViewportWidth="196.0" prefWidth="196.0">
                <content>
-                  <VBox fx:id="presentListVBox" layoutY="44.0" prefHeight="391.0" prefWidth="196.0" />
+                  <VBox fx:id="presentListVBox" layoutY="44.0" prefHeight="391.0" prefWidth="200.0" />
                </content>
             </ScrollPane>
          </children></Pane>
