--- a/CPClient/src/main/resources/fxml/managerUI/PresentForSumCell.fxml
+++ b/CPClient/src/main/resources/fxml/managerUI/PresentForSumCell.fxml
@@ -9,13 +9,12 @@
 
 <!-- <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="594.0" prefWidth="921.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.managerUI.PresentForSumController"> -->
 
-
 <AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Pane fx:id="presentListPane" prefHeight="435.0" prefWidth="196.0" style="-fx-background-color: #FFB5B5;">
          <children>
             <Label layoutX="62.0" layoutY="14.0" text="赠品清单" />
-            <ScrollPane layoutY="44.0" opacity="0.0" prefViewportHeight="391.0" prefViewportWidth="196.0">
+            <ScrollPane layoutY="44.0" prefHeight="393.0" prefViewportHeight="391.0" prefViewportWidth="196.0" prefWidth="196.0">
                <content>
                   <VBox fx:id="presentListVBox" layoutY="44.0" prefHeight="391.0" prefWidth="196.0" />
                </content>
