--- a/CPClient/src/main/resources/css/forms/ListOfForms.css
+++ b/CPClient/src/main/resources/css/forms/ListOfForms.css
@@ -1,5 +1,18 @@
 /*显示表单列表时所使用
  */
+ 
+.root{
+	-fx-background-color:#FFB5B5;
+}
+
+.text-field{
+	-fx-background-radius:23;
+	-fx-border-radius:23;
+}
+
+.background{
+	-fx-background-color:#FFB5B5;
+}
 .button {
 	-fx-background-color : #ff7575;
 	-fx-background-radius :23;
@@ -8,7 +21,7 @@
 }
 
 .button:hover {
-	-fx-text-fill: white;
+	-fx-text-fill: #000000;
 }
 
 
