能够打开具体的收款单了

--- a/CPClient/src/main/resources/css/forms/Forms.css
+++ b/CPClient/src/main/resources/css/forms/Forms.css
@@ -5,12 +5,10 @@
 }
 
 .root {
-	-fx-background-color:#100
+	-fx-background-color:#FFF7FB
 }
 
-#root {
-	-fx-background-color:#100
-}
+
 
 .pane{
 	-fx-background-color:#100
