更新一部分sale模块的界面层，修改了vipgrade中获得vipgrade的方法（好像有更优雅的实现）

--- a/CPClient/src/main/resources/fxml/salesmanUI/StockTypeApproveList.fxml
+++ b/CPClient/src/main/resources/fxml/salesmanUI/StockTypeApproveList.fxml
@@ -42,7 +42,11 @@
               <content>
                 <AnchorPane maxHeight="250.0" maxWidth="700.0" minHeight="250.0" minWidth="700.0" prefHeight="250.0" prefWidth="700.0">
                      <children>
-                        <VBox fx:id="goodsListVBox" prefHeight="250.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                        <VBox prefHeight="250.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <children>
+                              <fx:include source="TableHead.fxml" />
+                              <VBox fx:id="goodsListVBox" prefHeight="252.0" prefWidth="700.0" />
+                           </children></VBox>
                      </children>
                   </AnchorPane>
               </content>
