--- a/CPClient/src/main/resources/fxml/salesmanUI/SaleTypeList.fxml
+++ b/CPClient/src/main/resources/fxml/salesmanUI/SaleTypeList.fxml
@@ -41,8 +41,12 @@
             <ScrollPane hbarPolicy="NEVER" layoutX="87.0" layoutY="133.0" maxHeight="250.0" maxWidth="700.0" minHeight="250.0" minWidth="700.0" prefHeight="250.0" prefWidth="700.0">
               <content>
                 <AnchorPane maxHeight="250.0" maxWidth="700.0" minHeight="250.0" minWidth="700.0" prefHeight="250.0" prefWidth="700.0">
-                     <children>
-                        <VBox fx:id="goodsListVBox" prefHeight="250.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                    <children>
+                        <VBox prefHeight="250.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <children>
+                              <fx:include source="TableHead.fxml" />
+                              <VBox fx:id="goodsListVBox" prefHeight="252.0" prefWidth="700.0" />
+                           </children></VBox>
                      </children>
                   </AnchorPane>
               </content>
