--- a/CPClient/src/main/resources/fxml/salesmanUI/TableHead.fxml
+++ b/CPClient/src/main/resources/fxml/salesmanUI/TableHead.fxml
@@ -5,22 +5,53 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane maxHeight="30.0" maxWidth="730.0" minHeight="30.0" minWidth="730.0" prefHeight="30.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="30.0" maxWidth="700.0" minHeight="30.0" minWidth="700.0" prefHeight="30.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="730.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <HBox maxHeight="-Infinity" maxWidth="700.0" minHeight="-Infinity" minWidth="700.0" prefHeight="30.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label fx:id="idLabel" prefHeight="30.0" prefWidth="102.0" text="商品编号" wrapText="true" />
+            <Label fx:id="idLabel" prefHeight="30.0" prefWidth="102.0" text="商品编号" wrapText="true" >
+                <font>
+                  <Font size="14.0" />
+               </font>
+               </Label>
             <Separator orientation="VERTICAL" prefHeight="200.0" />
-            <Label fx:id="nameLabel" prefHeight="30.0" prefWidth="83.0" text="名称" wrapText="true" />
+            <Label fx:id="nameLabel" prefHeight="30.0" prefWidth="83.0" text="名称" wrapText="true" >
+                           <font>
+                  <Font size="14.0" />
+               </font>
+               </Label>
             <Separator orientation="VERTICAL" prefHeight="200.0" />
-            <Label fx:id="typeLabel" prefHeight="30.0" prefWidth="60.0" text="型号" />
+            <Label fx:id="typeLabel" prefHeight="30.0" prefWidth="60.0" text="型号" >
+                          <font>
+                  <Font size="14.0" />
+               </font>
+               </Label>
             <Separator orientation="VERTICAL" prefHeight="200.0" />
-            <Label prefHeight="30.0" prefWidth="56.0" text="×" />
-            <TextField fx:id="amountTextField" editable="false" maxHeight="42.0" minHeight="10.0" prefHeight="30.0" prefWidth="75.0" text="数量" />
-            <TextField fx:id="priceTextField" editable="false" minHeight="15.0" prefHeight="30.0" prefWidth="81.0" text="单价" />
-            <Label fx:id="sumLabel" prefHeight="30.0" prefWidth="61.0" text="金额" />
-            <TextField fx:id="notesTextField" editable="false" minHeight="15.0" prefHeight="30.0" prefWidth="263.0" text="备注" />
+            <Label prefHeight="30.0" prefWidth="56.0" text="×" >
+                           <font>
+                  <Font size="14.0" />
+               </font>
+               </Label>
+            <TextField fx:id="amountTextField" editable="false" maxHeight="42.0" minHeight="10.0" prefHeight="30.0" prefWidth="75.0" text="数量" >
+                          <font>
+                  <Font size="14.0" />
+               </font>
+               </TextField>
+            <TextField fx:id="priceTextField" editable="false" minHeight="15.0" prefHeight="30.0" prefWidth="81.0" text="单价" >
+                           <font>
+                  <Font size="14.0" />
+               </font>
+               </TextField>
+            <Label fx:id="sumLabel" prefHeight="30.0" prefWidth="61.0" text="金额" >
+                           <font>
+                  <Font size="14.0" />
+               </font>
+               </Label>
+            <TextField fx:id="singleNotesTextField" editable="false" minHeight="15.0" prefHeight="30.0" prefWidth="263.0" text="备注" >
+                           <font>
+                  <Font size="14.0" />
+               </font>
+               </TextField>
             <Button fx:id="deleteBtn" disable="true" minHeight="10.0" mnemonicParsing="false" opacity="0.0" prefHeight="30.0" prefWidth="80.0" text="删除">
                <font>
                   <Font size="14.0" />
