--- a/CPClient/src/main/resources/fxml/salesmanUI/TableItem.fxml
+++ b/CPClient/src/main/resources/fxml/salesmanUI/TableItem.fxml
@@ -21,7 +21,7 @@
             <TextField fx:id="priceTextField" minHeight="15.0" prefHeight="30.0" prefWidth="81.0" text="单价" />
             <Label fx:id="sumLabel" prefHeight="30.0" prefWidth="61.0" text="金额" />
             <TextField fx:id="notesTextField" minHeight="15.0" prefHeight="30.0" prefWidth="263.0" text="备注" />
-            <Button fx:id="deleteBtn" minHeight="10.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" text="删除">
+            <Button fx:id="deleteBtn" minHeight="10.0" mnemonicParsing="false" onAction="#delete" prefHeight="30.0" prefWidth="80.0" text="删除">
                <font>
                   <Font size="14.0" />
                </font>
