完善销售模块界面，修正赠送模块界面，添加了数据层的统计总额方法，salesmanlistpo继承了listpo，实现了表单模块需要的接口，对user单例有一些小疑问（见todo）

--- a/CPClient/src/main/resources/fxml/salesmanUI/StockTypeList.fxml
+++ b/CPClient/src/main/resources/fxml/salesmanUI/StockTypeList.fxml
@@ -14,12 +14,12 @@
          <children>
             <Pane layoutY="6.0" prefHeight="59.0" prefWidth="921.0">
                <children>
-                  <Label fx:id="VIPName" layoutX="211.0" layoutY="46.0" prefHeight="27.0" prefWidth="92.0" text="客户名字">
+                  <Label fx:id="VIPName" layoutX="211.0" layoutY="46.0" prefHeight="27.0" prefWidth="92.0">
                      <font>
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <Label fx:id="VIPID" layoutX="325.0" layoutY="46.0" prefHeight="27.0" prefWidth="92.0" text="客户编号">
+                  <Label fx:id="VIPID" layoutX="325.0" layoutY="46.0" prefHeight="27.0" prefWidth="92.0">
                      <font>
                         <Font size="15.0" />
                      </font>
