--- a/CPClient/src/main/resources/fxml/commonUI/SearchResult.fxml
+++ b/CPClient/src/main/resources/fxml/commonUI/SearchResult.fxml
@@ -17,7 +17,7 @@
             </font>
          </Label>
          <Button fx:id="cancelBtn" layoutX="265.0" layoutY="242.0" mnemonicParsing="false" onAction="#onCancelBtnClicked" prefHeight="27.0" prefWidth="63.0" style="-fx-background-radius: 23; -fx-border-radius: 23; -fx-background-color: FF7575;" text="取消" textFill="WHITE" />
-            <ScrollPane layoutY="55.0" prefViewportHeight="181.0" prefViewportWidth="465.0">
+            <ScrollPane layoutY="55.0" prefHeight="183.0" prefViewportHeight="181.0" prefViewportWidth="465.0" prefWidth="459.0">
                <content>
                   <VBox fx:id="vBox" layoutY="55.0" prefHeight="181.0" prefWidth="465.0" />
                </content>
