--- a/CPClient/src/main/resources/fxml/accountUI/CollectionList.fxml
+++ b/CPClient/src/main/resources/fxml/accountUI/CollectionList.fxml
@@ -55,7 +55,7 @@
                         <Font size="17.0" />
                      </font>
                   </Label>
-                  <ComboBox fx:id="AccountComboBox" layoutX="580.0" layoutY="16.0" onAction="#OnAccountSelected" onMouseClicked="#OnAccountSelected" prefHeight="27.0" prefWidth="167.0" />
+                  <ComboBox fx:id="AccountComboBox" layoutX="580.0" layoutY="16.0" onAction="#OnAccountSelected" prefHeight="27.0" prefWidth="167.0" />
                </children>
             </Pane>
             <ScrollPane hbarPolicy="NEVER" layoutX="87.0" layoutY="90.0" prefHeight="287.0" prefWidth="697.0">
@@ -76,7 +76,7 @@
             </ScrollPane>
             <Pane layoutY="379.0" prefHeight="97.0" prefWidth="921.0">
                <children>
-                  <Button fx:id="saveBtn" layoutX="518.0" layoutY="35.0" mnemonicParsing="false" onMouseClicked="#onSaveBtnClicked" text="保存">
+                  <Button fx:id="saveBtn" layoutX="610.0" layoutY="34.0" mnemonicParsing="false" onAction="#onSaveBtnClicked" text="保存">
                      <font>
                         <Font size="18.0" />
                      </font></Button>
@@ -94,6 +94,11 @@
                         <Font size="20.0" />
                      </font>
                   </Label>
+                  <Button fx:id="closeBtn" layoutX="480.0" layoutY="34.0" mnemonicParsing="false" onAction="#onCloseBtnClicked" text="关闭">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
                </children>
             </Pane>
          </children>
