写完了库存报损单、报溢单、报警单、赠送单的查看界面和其跳转逻辑。今晚将写一下库存报告单和库存赠送单的新建界面。明天写库存查看、库存盘点、表单查看的界面。我要在明晚部署集成测试！！

--- a/CPClient/src/main/resources/fxml/stockmanUI/Stockman.fxml
+++ b/CPClient/src/main/resources/fxml/stockmanUI/Stockman.fxml
@@ -34,9 +34,9 @@
                   <Font size="18.0" />
                </font>
                <items>
-                  <MenuItem fx:id="lookPresentListBtn" mnemonicParsing="false" style="-fx-background-color: transparent;" styleClass="ui.saleUI.Sale.css" text="库存赠送单" />
-                  <MenuItem fx:id="lookStockOverflowListBtn" mnemonicParsing="false" style="-fx-background-color: transparent;" text="库存报溢单" />
-                  <MenuItem fx:id="lookStockLostListBtn" mnemonicParsing="false" style="-fx-background-color: transparent;" text="库存报损单" />
+                  <MenuItem fx:id="lookPresentListBtn" mnemonicParsing="false" onAction="#lookPresentList" style="-fx-background-color: transparent;" styleClass="ui.saleUI.Sale.css" text="库存赠送单" />
+                  <MenuItem fx:id="lookStockOverflowListBtn" mnemonicParsing="false" onAction="#lookStockOverflowList" style="-fx-background-color: transparent;" text="库存报溢单" />
+                  <MenuItem fx:id="lookStockLostListBtn" mnemonicParsing="false" onAction="#lookStockLostList" style="-fx-background-color: transparent;" text="库存报损单" />
                   <MenuItem fx:id="lookAlarmListBtn" mnemonicParsing="false" onAction="#lookAlarmList" style="-fx-background-color: transparent;" text="库存报警单" />
                </items>
             </MenuButton>
