--- a/CPClient/src/main/resources/fxml/stockmanUI/StoreList.fxml
+++ b/CPClient/src/main/resources/fxml/stockmanUI/StoreList.fxml
@@ -12,21 +12,9 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: #FFF7FB;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.stockmanUI.StoreListController">
    <children>
+   <fx:include source="../stockmanUI/Stockman.fxml" />
       <Pane prefHeight="200.0" prefWidth="200.0" />
-      <Pane layoutX="-4.0" prefHeight="97.0" prefWidth="1207.0" style="-fx-background-color: #FFECEC;">
-         <children>
-            <Label layoutX="206.0" layoutY="20.0" text="CuteProject" textFill="#9f353a">
-               <font>
-                  <Font name="System Bold Italic" size="20.0" />
-               </font>
-            </Label>
-            <ImageView layoutX="1161.0" layoutY="17.0">
-               <image>
-                  <Image url="@/img/logOut.png" />
-               </image>
-            </ImageView>
-         </children>
-      </Pane>
+
       <Pane layoutX="214.0" layoutY="123.0" prefHeight="131.0" prefWidth="921.0" style="-fx-background-color: #FFB5B5;">
          <children>
             <Label layoutX="34.0" layoutY="14.0" prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" />
@@ -40,56 +28,8 @@
             <Button fx:id="findButton" layoutX="830.0" layoutY="79.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="83.0" style="-fx-background-radius: 23; -fx-background-color: #ff7575; -fx-border-radius: 23;" text="查询" textFill="WHITE" />
             <ComboBox fx:id="combobox" layoutX="108.0" layoutY="79.0" prefWidth="150.0" />
          </children></Pane>
-      <VBox layoutX="13.0" layoutY="74.0" prefHeight="730.0" prefWidth="122.0" style="-fx-background-color: #ff7575;">
-         <children>
-            <Button mnemonicParsing="false" prefHeight="52.0" prefWidth="106.0" style="-fx-background-color: transparent;" textFill="#9f353a" />
-            <Button mnemonicParsing="false" prefHeight="52.0" prefWidth="106.0" style="-fx-background-color: transparent;" textFill="#9f353a" />
-            <MenuButton fx:id="newBtn" mnemonicParsing="false" popupSide="RIGHT" prefHeight="57.0" prefWidth="122.0" style="-fx-background-color: transparent;" text="      新建" textFill="#9f353a">
-              <items>
-                <MenuItem fx:id="aaa" mnemonicParsing="false" style="-fx-background-color: transparent;" text="单据1" />
-                <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="单据2" />
-                  <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="单        据         3" />
-              </items>
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </MenuButton>
-            <MenuButton fx:id="lookBtn" mnemonicParsing="false" popupSide="RIGHT" prefHeight="57.0" prefWidth="122.0" style="-fx-background-color: #C48888;" text="      查看" textFill="#9f353a">
-               <font>
-                  <Font size="18.0" />
-               </font>
-               <items>
-                  <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="单据1" />
-                  <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="单据2" />
-                  <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="单        据         3" />
-               </items>
-            </MenuButton>
-            <MenuButton fx:id="lookBtn1" mnemonicParsing="false" popupSide="RIGHT" prefHeight="57.0" prefWidth="122.0" style="-fx-background-color: transparent;" text="      个人" textFill="#9f353a">
-               <font>
-                  <Font size="18.0" />
-               </font>
-               <items>
-                  <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="个人信息" />
-                  <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="消息" />
-               </items>
-            </MenuButton>
-            <Button fx:id="draftBtn" mnemonicParsing="false" prefHeight="62.0" prefWidth="122.0" style="-fx-background-color: transparent;" text="商品" textFill="#9f353a">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Button>
-            <Button fx:id="draftBtn1" mnemonicParsing="false" prefHeight="62.0" prefWidth="122.0" style="-fx-background-color: transparent;" text="库存" textFill="#9f353a">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Button>
-         </children>
-      </VBox>
-      <Circle fill="#5cfeff99" layoutX="107.0" layoutY="87.0" opacity="0.67" radius="80.0" stroke="BLACK" strokeMiterLimit="0.0" strokeWidth="0.0">
-         <effect>
-            <DropShadow blurType="GAUSSIAN" color="#c74242cf" height="0.0" radius="6.2675" width="27.07" />
-         </effect>
-      </Circle>
+     
+     
       <ScrollPane layoutX="214.0" layoutY="293.0" prefHeight="447.0" prefWidth="921.0">
          <content>
             <VBox fx:id="vBox" prefHeight="460.0" prefWidth="919.0" />
