--- a/CPClient/src/main/resources/fxml/accountUI/CashExpenseList.fxml
+++ b/CPClient/src/main/resources/fxml/accountUI/CashExpenseList.fxml
@@ -13,12 +13,12 @@
       <Pane prefHeight="79.0" prefWidth="921.0">
          <children>
             <Label layoutX="34.0" layoutY="14.0" prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" />
-            <Label layoutX="55.0" layoutY="23.0" text="收款单">
+            <Label layoutX="55.0" layoutY="23.0" text="现金费用单">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label fx:id="listID" layoutX="574.0" layoutY="26.0" prefHeight="27.0" prefWidth="177.0" text="SKD-yyyymmdd-00000">
+            <Label fx:id="listID" layoutX="574.0" layoutY="26.0" prefHeight="27.0" prefWidth="197.0" text="XJFYD-yyyymmdd-00000">
                <font>
                   <Font size="15.0" />
                </font>
@@ -34,38 +34,29 @@
          <children>
             <Pane layoutY="6.0" prefHeight="59.0" prefWidth="921.0">
                <children>
-                  <Label layoutX="70.0" layoutY="19.0" prefHeight="23.0" prefWidth="41.0" text="客户" textFill="#938c8c">
+                  <Label layoutX="479.0" layoutY="18.0" prefHeight="23.0" prefWidth="78.0" text="银行账户" textFill="#938c8c">
                      <font>
                         <Font size="17.0" />
                      </font>
                   </Label>
-                  <Button fx:id="selectVIPBtn" layoutX="128.0" layoutY="17.0" mnemonicParsing="false" text="选择" />
-                  <Label fx:id="VIPName" layoutX="210.0" layoutY="16.0" prefHeight="27.0" prefWidth="92.0" text="客户名字">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="VIPID" layoutX="322.0" layoutY="16.0" prefHeight="27.0" prefWidth="92.0" text="客户编号">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="accountLabel" layoutX="479.0" layoutY="18.0" prefHeight="23.0" prefWidth="78.0" text="银行账户" textFill="#938c8c">
+                  <ComboBox fx:id="AccountComboBox" layoutX="580.0" layoutY="16.0" prefHeight="27.0" prefWidth="167.0" />
+                  <Label layoutX="93.0" layoutY="18.0" prefHeight="23.0" prefWidth="62.0" text="条目名" textFill="#938c8c">
                      <font>
                         <Font size="17.0" />
                      </font>
                   </Label>
-                  <ComboBox fx:id="AccountComboBox" layoutX="580.0" layoutY="16.0" onAction="#OnAccountSelected" prefHeight="27.0" prefWidth="167.0" />
+                  <TextField fx:id="entryNameTextField" layoutX="173.0" layoutY="16.0" promptText="请输入条目名" />
+                  <Button fx:id="addEntryBtn" layoutX="371.0" layoutY="16.0" mnemonicParsing="false" onAction="#onAddEntryBtnClicked" text="添加" />
                </children>
             </Pane>
             <ScrollPane hbarPolicy="NEVER" layoutX="87.0" layoutY="90.0" prefHeight="287.0" prefWidth="697.0">
               <content>
                 <AnchorPane prefHeight="276.0" prefWidth="696.0">
                 	<children>
-                        <TableView fx:id="TransferListTableView" layoutX="2.0" opacity="0.68" prefHeight="276.0" prefWidth="693.0" style="-fx-background-color: transparent;" AnchorPane.leftAnchor="2.0" AnchorPane.rightAnchor="0.0">
+                        <TableView fx:id="EntryListTableView" layoutX="2.0" opacity="0.68" prefHeight="276.0" prefWidth="693.0" style="-fx-background-color: transparent;" AnchorPane.leftAnchor="2.0" AnchorPane.rightAnchor="0.0">
                            <columns>
-                              <TableColumn fx:id="account" prefWidth="292.0" text="银行账户" />
-                              <TableColumn fx:id="amount" prefWidth="180.0" text="转账金额" />
+                              <TableColumn fx:id="entryName" prefWidth="292.0" text="条目名" />
+                              <TableColumn fx:id="amount" prefWidth="180.0" text="金额" />
                               <TableColumn fx:id="note" prefWidth="170.0" text="备注" />
                               <TableColumn fx:id="deleted" prefWidth="50.0" text="删除" />
                            </columns>
