--- a/CPClient/src/main/resources/fxml/commonUI/Background.fxml
+++ b/CPClient/src/main/resources/fxml/commonUI/Background.fxml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
+
 <AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.mainUI.BackgroundController">
     <children>
         <Pane prefHeight="200.0" prefWidth="200.0" />
@@ -21,6 +28,7 @@
                         <Image url="@../../img/logOut.png" />
                     </image>
                 </ImageView>
+            <JFXHamburger fx:id="hamburger1" layoutX="1103.0" layoutY="17.0" stylesheets="@../../css/commonUI/Common.css" />
             </children>
         </Pane>
         <Pane fx:id="addNext" layoutX="177.0" layoutY="121.0" opacity="0.39" prefHeight="646.0" prefWidth="978.0" style="-fx-background-color: transparent;">
