--- a/CPClient/src/main/resources/fxml/salesmanUI/VIPInfoEdit.fxml
+++ b/CPClient/src/main/resources/fxml/salesmanUI/VIPInfoEdit.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.*?>
 <?import java.lang.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
@@ -45,19 +46,10 @@
                                         <Label prefHeight="45.0" prefWidth="145.0" text="默认业务员" textAlignment="CENTER" textFill="#938c8c" GridPane.rowIndex="8" />
                                         <Label prefHeight="45.0" prefWidth="145.0" text="分类" textFill="#938c8c" GridPane.rowIndex="2" />
                                         <Label prefHeight="45.0" prefWidth="145.0" text="地址" textAlignment="CENTER" textFill="#938c8c" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-                                        <TextField fx:id="name" opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                        <TextField fx:id="category" opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                        <TextField fx:id="phoneNumber" opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                                        <TextField fx:id="email" opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                                        <TextField fx:id="collection" opacity="0.61" GridPane.columnIndex="4" GridPane.rowIndex="7" />
                                         <Label prefHeight="45.0" prefWidth="145.0" text="编号" textFill="#938c8c" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                                        <TextField fx:id="id" opacity="0.65" GridPane.columnIndex="4" GridPane.rowIndex="1" />
                                         <Label prefHeight="45.0" prefWidth="145.0" text="电子邮箱" textAlignment="CENTER" textFill="#938c8c" GridPane.rowIndex="4" />
-                                        <TextField fx:id="address" opacity="0.61" GridPane.columnIndex="4" GridPane.rowIndex="3" />
                                         <Label prefHeight="45.0" prefWidth="145.0" text="级别" textFill="#938c8c" GridPane.columnIndex="3" GridPane.rowIndex="2" />
                                         <Label prefHeight="45.0" prefWidth="145.0" text="邮编" textAlignment="CENTER" textFill="#938c8c" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-                                        <TextField fx:id="postcode" opacity="0.65" GridPane.columnIndex="4" GridPane.rowIndex="4" />
-                                        <TextField fx:id="grade" opacity="0.61" GridPane.columnIndex="4" GridPane.rowIndex="2" />
                                         <Label prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" GridPane.rowIndex="6" />
                                         <Label text="     应收应付" GridPane.rowIndex="6">
                                             <font>
@@ -65,14 +57,23 @@
                                             </font>
                                         </Label>
                                         <Label prefHeight="45.0" prefWidth="145.0" text="应收额度" textAlignment="CENTER" textFill="#938c8c" GridPane.rowIndex="7" />
-                                        <TextField fx:id="collectionLimit" opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                                         <Label prefHeight="45.0" prefWidth="145.0" text="应收" textAlignment="CENTER" textFill="#938c8c" GridPane.columnIndex="3" GridPane.rowIndex="7" />
-                                        <TextField fx:id="clerk" opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="8" />
                                         <Label prefHeight="45.0" prefWidth="145.0" text="应付" textAlignment="CENTER" textFill="#938c8c" GridPane.columnIndex="3" GridPane.rowIndex="8" />
-                                        <TextField fx:id="payment" opacity="0.61" GridPane.columnIndex="4" GridPane.rowIndex="8" />
+                              <JFXTextField fx:id="name" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <JFXTextField fx:id="id" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+                              <JFXTextField fx:id="category" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <JFXTextField fx:id="grade" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+                              <JFXTextField fx:id="phoneNumber" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <JFXTextField fx:id="address" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+                              <JFXTextField fx:id="email" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <JFXTextField fx:id="postcode" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+                              <JFXTextField fx:id="collectionLimit" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                              <JFXTextField fx:id="collection" GridPane.columnIndex="4" GridPane.rowIndex="7" />
+                              <JFXTextField fx:id="clerk" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                              <JFXTextField fx:id="payment" GridPane.columnIndex="4" GridPane.rowIndex="8" />
                                     </children>
                                 </GridPane>
-                        <Button fx:id="saveVIPInfoBtn" layoutX="526.0" layoutY="408.0" mnemonicParsing="false" onAction="#setSaveVIPInfoBtn" prefHeight="27.0" prefWidth="56.0" style="-fx-background-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 23;" text="保存" textFill="#fcfcfc" />
+                        <JFXButton fx:id="saveVIPInfoBtn" buttonType="RAISED" layoutX="522.0" layoutY="409.0" onAction="#setSaveVIPInfoBtn" prefHeight="26.0" prefWidth="62.0" ripplerFill="#f20707" style="-fx-background-color: #ff7575; -fx-border-radius: 22; -fx-background-radius: 22;" text="保存" textFill="#f5f4f4" />
                             </children>
                         </AnchorPane>
                     </children>
